@@ -26,7 +26,7 @@
 #
 
 DFT_BIN=~/espresso-3.2/bin
-TMPDIR=/scratch/WanT
+TMPDIR=/scratch/benedett/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX= 
